Stop at repocount in INI
for testing

--- a/clone_org_repos.ini
+++ b/clone_org_repos.ini
@@ -3,6 +3,10 @@ Host = https://app.copia.io
 Token = 
 Organization = 
 
-#WARNING: "MoveTo" will overwrite similar existing data in the location defined!
-#Enter the full path to put the Org folder including its repos
+# RepoCount is set to 1 for initial setup and testing.
+# Once working as desired, change this to 0 for all repos.
+RepoCount = 1
+
+# WARNING: "MoveTo" will overwrite similar existing data in the location defined!
+# Enter the full path to put the Org folder including its repos
 MoveTo = 
