Fixed for SSO and INI setting
Changed RepoCount to StopAfter in the INI and corrected the code.  Also,  now injecting the token into the clone URL to handle SSO issues.

--- a/clone_org_repos.ini
+++ b/clone_org_repos.ini
@@ -3,9 +3,10 @@ Host = https://app.copia.io
 Token = 
 Organization = 
 
-# RepoCount is set to 1 for initial setup and testing.
-# Once working as desired, change this to 0 for all repos.
-RepoCount = 1
+# StopAfter is set to 1 for initial setup and testing.  
+# It will stop after cloning the defined number of repos
+# A setting of 0 will clone all repos.
+StopAfter = 0
 
 # WARNING: "MoveTo" will overwrite similar existing data in the location defined!
 # Enter the full path to put the Org folder including its repos
