Added Branch INI setting and Build info
Some users will not use the default branch for DeviceLink, as an example, so using this to backup latest backups may need to target a different branch.

--- a/clone_org_repos.ini
+++ b/clone_org_repos.ini
@@ -11,3 +11,8 @@ StopAfter = 0
 # WARNING: "MoveTo" will overwrite similar existing data in the location defined!
 # Enter the full path to put the Org folder including its repos
 MoveTo = 
+
+# If defined, the script will clone only the defined Branch
+# If no branch is defined, it will use the default Branch
+# the default for this setting is "main", if undefined it will use "main"
+Branch = main
