--- a/clone_org_repos.ini
+++ b/clone_org_repos.ini
@@ -13,6 +13,5 @@ StopAfter = 0
 MoveTo = 
 
 # If defined, the script will clone only the defined Branch
-# If no branch is defined, it will use the default Branch
-# the default for this setting is "main", if undefined it will use "main"
-Branch = main
+# The default for this setting is "main", if undefined it will use "main"
+Branch=main
